<resources>
    <string name="app_name">Story App</string>
    <string name="iv_splash_screen">Ikon Launcher pada Layar Splash</string>
    <string name="start">Mulai</string>
    <string name="signup">Daftar</string>
    <string name="login">Masuk</string>
    <string name="message_welcome_page">Mau belajar Android, iOS, Machine Learning, Cloud, Front-End, Back-End, dan bidang IT lainnya? Di Dicoding aja!</string>
    <string name="title_welcome_page">Selamat datang di Dicoding!</string>
    <string name="title_signup_page">Lengkapi data dirimu di bawah ini ya</string>
    <string name="message_login_page">Masukkan dulu datamu yang telah didaftarkan ya</string>
    <string name="title_login_page">Sudah siap untuk upgrade skill?</string>
    <string name="logout">Keluar</string>
    <string name="name">Nama</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="name_hint">Nama Lengkap</string>
    <string name="email_hint">example@gmail.com</string>
    <string name="password_hint">Minimal 8 karakter</string>
    <string name="email_hint2">Masukkan email</string>
    <string name="password_hint2">Masukkan password</string>
    <string name="have_account">Sudah memiliki akun?</string>
    <string name="dont_have_account">Belum memiliki akun?</string>
    <string name="signup_successful">Akun telah berhasil didaftarkan</string>
    <string name="password_minimum">Password harus terdiri dari minimal 8 karakter</string>
    <string name="email_cannot_empty">Email tidak boleh kosong</string>
    <string name="name_cannot_empty">Nama tidak boleh kosong</string>
    <string name="password_cannot_empty">Password tidak boleh kosong</string>
    <string name="profilePhoto">Foto Profil</string>
    <string name="username">Username</string>
    <string name="description">Ini adalah deskripsi foto.</string>
    <string name="no_data">Daftar cerita tidak ada</string>
    <string name="post_a_picture">tambah cerita</string>
    <string name="menu_1">Setting</string>
    <string name="menu_2">Logout</string>
    <string name="menu_3">Map</string>
    <string name="detail">Detail</string>
    <string name="back">kembali</string>
    <string name="gallery">Galeri</string>
    <string name="upload">Unggah</string>
    <string name="camera">Kamera</string>
    <string name="enter_description">Tuliskan deskripsi gambar</string>
    <string name="add_story">Tambah Cerita</string>
    <string name="description_cannot_empty">Deskripsi tidak boleh kosong</string>
    <string name="image_posted">Cerita berhasil di post</string>
    <string name="select_image">Pilih gambar terlebih dahulu</string>
    <string name="valid_email">Silakan masukkan email yang valid</string>
    <string name="title_activity_maps">Peta</string>
    <string name="normal_type">Normal</string>
    <string name="satellite_type">Satelit</string>
    <string name="terrain_type">Topografi</string>
    <string name="hybrid_type">Hibrid</string>
    <string name="retry">retry</string>
    <string name="story_map_title">Cerita oleh %s - Klik untuk melihat cerita</string>
    <string name="failed_fetching_data">Gagal mengambil story. Coba lagi nanti</string>
    <string name="failed_load_map">gagal memuat peta</string>
</resources>